--- a/Exemplar 20Q Essay/index.html
+++ b/Exemplar 20Q Essay/index.html
@@ -12,6 +12,12 @@
     <meta name="keywords" content="HTML Boilerplate, HTML Tags"> <!-- Key Words for conducting searches in Search Engines -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <style>
+      /* formatted like Processing-Java or JavaScript (multi-line only)
+      /* Comments can go here */
+      div {border: thin dotted red;}
+    </style>
+
   </head>
 
   <body>
@@ -22,39 +28,91 @@
       <!--  Date Accessed: 20191003 -->
       <h3>Link to Origonal Essay,
         <a href="https://apply.jhu.edu/essays-that-worked-2021/">Click Here</a>
+        <br>
+        <a>Author: Benjamin</a>
       </h3>
+      <!-- This illustrates how a single 'newline' doesn't affect rendering in browser -->
+      <p><b>Admissions Committee Comments</b><br>
+        We were impressed by the unique format Ben chose to describe himself and the lessons learned
+        through his interest in computer science. However, the essay's creative style succeeds due
+        to the strength of its content. Ben simulates electronic 20 questions to hook the reader's
+        attention while effectively bridging his academic interests and future aspirations. The
+        essay showcases his versatile interests, from computer science to basketball to political
+        debate, as concrete examples that demonstrate his personal philosophy of "practice and perseverance".
+        The essay successfully tells us about Ben's personality, academic and social interests,
+        and future ambitions, showing us a competitive student who would thrive here.
+      </p>
     </nav>
 
     <aside>
       <div>
-      Essay Outline
+      <h4>Essay Outline - Example Space to insert Ordered and Unordered Lists</h4>
+      <ul style="square">
+        <li> Illustrate me as a question asker, curious
+      </ul>
       </div>
     </aside>
+
     <section>
-      <h3>Section 1</h3>
+      <h4>“Is it bigger than a breadbox?”</h4>
+      <h5>“Yes.”</h5>
       <article>
-        <p>This is article 1 in section 1.</p>
-      </article>
-      <article>
-        <p>This is article 2 in section 1.</p>
+        <!-- This illustrates no new lines and the text existing on a scrollable window in ATOM.io-->
+        <p>I have always been tall, <strong>decidedly tall</strong>. Yet, my curiosity has always <strong>surpassed my height</strong>. Starting at a young age, I would ask countless questions, from “How heavy is the Earth?” to “Where does rain come from?” My curiosity, displayed in questions like these, has truly defined me as a person and as a student. Therefore, it is not surprising that I became transfixed the first time I played <em>20Q</em>. (the electronic version<sup><a href="https://en.wikipedia.org/wiki/20Q">1</a></sup> of <em>Twenty Questions</em><sup><a href="https://www.google.com/search?q=twenty+questions+game&rlz=1C1GCEU_en&oq=twenty+Questions+game&aqs=chrome.0.0l6.4806j0j4&sourceid=chrome&ie=UTF-8">2</a></sup>). Somehow, a little spherical device guessed what I was thinking. The piece of technology <strong>sparked</strong> my curiosity and instilled in me a unique interest in <em>20Q</em>. This interest would later reveal <em>valuable character traits</em> of mine while also paralleling various facets of my life.</p>
       </article>
     </section>
+
     <section>
-      <h3>Section 2</h3>
+      <h4>“Does it strive to learn?”</h4>
+      <h5>“Yes.”</h5>
       <article>
-        <p>This is article 1 in section 2.</p>
+        <p>I became determined to discover how 20Q guessed correctly. After some research, I discovered artificial intelligence, more specifically, artificial neural networks—systems which learn and improve themselves. This idea fascinated me. I wanted to learn more. I read avidly, seeking and absorbing as much information as I could. When given the opportunity years later, I signed up for the first computer programming class available to me. I found myself in an environment I loved. I would stay after class, go in during free periods, make my own apps, and work over Cloud-based IDEs. I prized the freedom and the possibilities.</p>
       </article>
+    </section>
+
+    <section>
+      <h4>“Is it driven?”</h4>
+      <h5>"Yes"</h5>
       <article>
-        <p>This is article 2 in section 2.</p>
+        <p>After my introduction to 20Q, I began to play Twenty Questions (the traditional parlor game) and became determined to rival the guessing accuracy of the artificial intelligence. At first I was mediocre. However, through long car rides with family, good-natured yet heated competitions with friends, logical strategy, and time, I became more effective. I discovered the “secrets” to success: practice and perseverance.</p>
       </article>
+    </section>
+
+    <section>
+      <h4>“Does it apply what it learns?”</h4>
+      <h5>"Yes"</h5>
+      <article>
+        <p>As 20Q implements what it learns, so do I. Throughout high school, I applied the “secret” of practice to my basketball career. I spent countless hours sharpening my skills in 90° summer heat to 20° late-winter cold, countless afternoons playing pickup games with my friends, and countless weekends traveling to AAU basketball tournaments. As a result, I became a starter for my school’s varsity team. I applied another “secret,” this time the “secret” of perseverance, by dedicating myself to physical therapy after knee surgery in order to quickly return to football. Later that year, I became the first player in my grade to score a varsity touchdown.</p>
+      </article>
+    </section>
+
+    <section>
+      <h4>“Does it attempt to better itself?”</h4>
+      <h5>"Yes"</h5>
+      <article>
+        <p>Once I became proficient at Twenty Questions, I strengthened my resolve to become masterful. To do so, I needed to become a skillful inquisitor and to combine that with my analytical nature and interpersonal skills, all of which are vital for success in Twenty Questions. Because I had been debating politics with my friends since the 8th grade, I recognized that debate could sharpen these skills. I began to debate more frequently (and later more effectively) in English and government class, at the lunch table and family gatherings, and whenever the opportunity presented itself. This spurred in me an interest for how public policy and government work, leading me to attend Boys State and receive a nomination for The United States Senate Youth Program.</p>
+      </article>
+    </section>
+
+    <section>
+      <h4>“Does it think deeply?</h4>
+      <h5>"Yes"</h5>
+      <article>
+        <p>So far, I have realized that thriving at Twenty Questions, just like life, is all about tenacity, rationality and interpersonal skills. I have found that, as in Twenty Questions, always succeeding is impossible; however, by persevering through difficulties and obstacles, favorable outcomes are often attainable. As I have become better at Twenty Questions, so too have I improved in many other aspects of my life. Nonetheless, I realize that I still have unbounded room to grow. And much like 20Q, I will continue to learn throughout my life and apply my knowledge to everything I do.</p>
+      </article>
+    </section>
+
+    <section>
+      <h4>“Are you thinking of me?”</h4>
+      <h5>"Yes"</h5>
+      <article></article>
     </section>
 
   </body>
 
   <footer>
-
+    <br><br>
     <p>&copy Mark Mercer, powered by MercersKitchen in GitHub</p>
-
   </footer>
 
 </html>
